<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/available_balance_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_view_green"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/budget_label_available_balance"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/available_balance_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/budget_available_balance_value"
            android:textColor="@color/white"
            android:textSize="40sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/monthly_budget_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_corner_view_white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/available_balance_layout"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/monthly_budget_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/monthly_budget_header_label"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/monthly_budget_cash_label"
                android:textColor="@color/grey" />
        </LinearLayout>

        <TextView
            android:id="@+id/monthly_budget_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:gravity="center"
            android:text="@string/monthly_budget_value"
            android:textColor="@color/dark_grey"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:progressDrawable="@drawable/custom_progress_bg"
        app:layout_constraintTop_toBottomOf="@id/monthly_budget_layout" />

    <LinearLayout
        android:id="@+id/progressBar_variables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/progressBar">

        <TextView
            android:id="@+id/progress_bar_start_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:text="@string/budget_start_limit"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/progress_bar_end_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/budget_end_limit"
            android:textSize="20sp"

            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/income_expense_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/progressBar_variables">

        <LinearLayout
            android:id="@+id/income_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_view_white"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/available_balance_layout"
            tools:layout_editor_absoluteX="1dp">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner_view_grey" />

            <TextView
                android:id="@+id/income_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="30dp"
                android:paddingEnd="10dp"
                android:text="@string/income_variable"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp"
                android:text="@string/income_label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/expense_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_view_white"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/available_balance_layout"
            tools:layout_editor_absoluteX="1dp">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner_view_grey" />

            <TextView
                android:id="@+id/expense_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="30dp"
                android:paddingEnd="10dp"
                android:text="@string/expense_variable"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="20dp"
                android:text="@string/expense_label" />
        </LinearLayout>
    </LinearLayout>

    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
    <!--        android:id="@+id/floatingActionButton_add_transaction"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:backgroundTint="@color/grey"-->
    <!--        android:clickable="true"-->
    <!--        android:focusable="true"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/income_expense_layout"-->
    <!--        app:srcCompat="@android:drawable/ic_input_add"-->
    <!--        app:tint="@android:color/white" />-->

    <Button
        android:id="@+id/view_transaction_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_view_grey"
        android:padding="20dp"
        android:text="@string/view_transactions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/income_expense_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>