<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_view_white">

    <RelativeLayout
        android:id="@+id/income_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <View
            android:id="@+id/image_view"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/square_corner_view_grey" />

        <TextView
            android:id="@+id/transaction_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/image_view"
            android:paddingStart="10dp"
            android:paddingEnd="30dp"
            android:text="@string/transaction_name"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/transaction_name_textview"
            android:layout_toEndOf="@id/image_view"
            android:paddingStart="10dp"
            android:paddingEnd="30dp"
            android:text="@string/transaction_date"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/transaction_name_textview"
            android:gravity="end"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:text="@string/transaction_amount"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/transaction_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/transaction_amount"
            android:layout_toEndOf="@id/transaction_date"
            android:gravity="right"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:paddingEnd="30dp"
            android:text="@string/transaction_mode"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>